# vs-nlm-cuda

./: CMakeLists.txt  README.md
.github/workflows/: linux.yml  windows.yml
source/: common.h  kernel.cu  source.cpp
